--- a/businessapps.plist
+++ b/businessapps.plist
@@ -17,7 +17,7 @@
                         <key>metadata</key>
                         <dict>
                                 <key>bundle-identifier</key>
-                                <string>com.xuanqu.dragonfantasy</string>
+                                <string>com.congyu.dragonfantasy</string>
                                 <key>bundle-version</key>
                                 <string>1.0.0</string>
                                 <key>kind</key>
