--- a/apps.plist
+++ b/apps.plist
@@ -11,13 +11,13 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>http://xuanqu.55555.io:8081/apps/dragonfantasy.ipa</string>
+                                        <string>http://xuanqu.55555.io/app/trunk/dragonfantasy.ipa</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
                         <dict>
                                 <key>bundle-identifier</key>
-                                <string>com.congyu.dragonfantasy</string>
+                                <string>com.xuanqu.dragonfantasy</string>
                                 <key>bundle-version</key>
                                 <string>1.0.0</string>
                                 <key>kind</key>
