--- a/apps_small.plist
+++ b/apps_small.plist
@@ -11,7 +11,7 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>http://xuanqu.55555.io/app/publish/dragonfantasy.ipa</string>
+                                        <string>http://xuanqu.55555.io/app/trunk/dragonfantasy_small.ipa</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
@@ -23,7 +23,7 @@
                                 <key>kind</key>
                                 <string>software</string>
                                 <key>title</key>
-                                <string>dragonfantasy</string>
+                                <string>DragonFantasy</string>
                         </dict>
                 </dict>
         </array>
