--- a/businessapps.plist
+++ b/businessapps.plist
@@ -11,7 +11,7 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>http://xuanqu.55555.io:8081/businessapps/dragonfantasy.ipa</string>
+                                        <string>http://xuanqu.55555.io/app/business/dragonfantasy.ipa</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
